# azure-privesc-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
src/azpe/: cli.py  graph.py
src/azpe/rules/: chains.py
