[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "azpe"
version = "0.0.1"
description = "Azure Privilege Escalation Toolkit (enum graph + privesc pathing)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Your Name" }]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "networkx>=3.3",
  "pydot>=1.4.2",
  "orjson>=3.10.7",
  "azure-identity>=1.17.1",
  "azure-mgmt-resource>=23.2.0",
  "azure-mgmt-authorization>=3.0.0",
  "azure-mgmt-keyvault>=10.3.0",
  "azure-mgmt-automation>=1.1.0",
  "azure-mgmt-web>=7.3.0",
  "msgraph-sdk>=1.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.2","pytest-cov>=5.0.0","ruff>=0.6.9","mypy>=1.11.2","pytest-recording>=0.13.2","types-orjson>=3.6.2"]

[project.scripts]
azpe = "azpe.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = true
disallow_untyped_defs = true
ignore_missing_imports = true
